Assert the top right corner of the Ash title bar is occupied by the close button

This CL provides guarantees that the close button is
in the top right of each window frame.

This change fixes a couple of bugs where transitionary layouts
didn't meet this assertion.

Bug: 832338
Change-Id: I44cc946b80fac8244f4f9b66f2738df837be552d
Reviewed-on: https://chromium-review.googlesource.com/1025493
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Mitsuru Oshima (OOO 4/30 - 5/9) <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554699}
Former-commit-id: 78a019ab64ece8d95610f678d3aa36f63675fb4d