ash/frame/caption_buttons/frame_caption_button_container_view.h
@@ -115,6 +115,7 @@ class ASH_EXPORT FrameCaptionButtonContainerView
   void Layout() override;
   const char* GetClassName() const override;
   void ChildPreferredSizeChanged(View* child) override;
+  void ChildVisibilityChanged(View* child) override;
 
   // gfx::AnimationDelegate:
   void AnimationEnded(const gfx::Animation* animation) override;
